feature: display the correct clock hand positions for the current time

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ https://www.linkedin.com/learning/javascript-essential-training-3
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Analog Clock</title>
     <link rel="stylesheet" href="style.css" type="text/css" media="all">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
