feature: added quote beside clock

--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@ https://www.linkedin.com/learning/javascript-essential-training-3
 
 <body>
 <main class="main">
+    <div class="quote">
+        <h1>
+            The way we spend our TIME defines who we are.
+        </h1>
+        <h2>Jonathan Estrin</h2>
+    </div>
     <div class="clock">
         <div class="shine">
-        <svg id="clock" width="600" height="600" viewBox="0 0 600 600">
             <path class="hour-marks" 
                   d="M300.5 94V61M506 300.5h32M300.5 506v33M94 
                      300.5H60M411.3 107.8l7.9-13.8M493 190.2l13-7.4M492.1 
