style: added shadow to the svg element that contains all clock hands and marks

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ https://www.linkedin.com/learning/javascript-essential-training-3
     </div>
     <div class="clock">
         <div class="shine">
+        <svg id="clock" class="shadow" width="600" height="600" viewBox="0 0 600 600">
             <path class="hour-marks" 
                   d="M300.5 94V61M506 300.5h32M300.5 506v33M94 
                      300.5H60M411.3 107.8l7.9-13.8M493 190.2l13-7.4M492.1 
